fixed login button spacing

--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -2,6 +2,10 @@
   width: 80px;
 }
 
+#loginbtn {
+  margin-top: 10px;
+}
+
 #heading {
   background-color: rgb(64, 64, 64);
   display: flex;
